# Smart-Logistics

./: .gitignore  README.md
docs/: 交通灯识别.docx  路径规划算法.docx
path-planning/A-Star/Astar_demo/: Astar.cpp
path-planning/A-star/: datatest3.txt  primer.cpp  starmap.txt
path-planning/Dijkstra/path-planning/: dijkstra.cpp  dijkstra.hpp  main.cpp
path-planning/Xcode_project/Astar/Astar_demo/: Astar.hpp
path-planning/Xcode_project/Astar/Astar_demo.xcodeproj/: project.pbxproj
path-planning/Xcode_project/Dijkstra/path-planning/: dijkstra.cpp  dijkstra.hpp  main.cpp
path-planning/Xcode_project/Dijkstra/path-planning.xcodeproj/: project.pbxproj
path-planning/cmake_project/Astar/: CMakeLists.txt  run.sh
path-planning/cmake_project/Astar/src/: Astar.cpp  main.cpp
path-planning/cmake_project/Dijkstra/: CMakeLists.txt  run.sh
path-planning/cmake_project/Dijkstra/include/: dijkstra.hpp
path-planning/cmake_project/Dijkstra/src/: dijkstra.cpp  main.cpp
vision/: Makefile  cmake_install.cmake
vision/Xcode_project/vision_client/: main.cpp  vision.cpp  vision.hpp
vision/Xcode_project/vision_client/vision_client/: main.cpp  vision.cpp  vision.hpp
vision/Xcode_project/vision_client/vision_client.xcodeproj/: project.pbxproj
vision/cmake_project/: CMakeCache.txt  CMakeLists.txt
vision/cmake_project/cv/: CMakeCache.txt  CMakeLists.txt  Makefile
vision/cmake_project/cv/include/: vision.hpp
vision/cmake_project/cv/src/: main.cpp  vision.cpp
vision/src/: main.cpp
(+12 files in other folders)
